[package]
name = "mark-clipboard"
authors = ["Mark Gaandolfo <mark@gandolfo.com.au"]
version = "0.1.2"
edition = "2021"
description = "A simple clipboard manager for the command line"
license = "MIT"
repository = "https://github.com/markgandolfo/mark-clipboard"
readme = "README.md"

[[bin]]
name = "x"
path = "src/main.rs"

[dependencies]
arboard = "3.4.0"
atty = "0.2.14"
